@@ -1,4 +1,4 @@
-# $NetBSD: mi,v 1.844 2005/12/29 14:53:47 tsutsui Exp $
+# $NetBSD: mi,v 1.845 2006/01/04 21:52:17 xtraeme Exp $
 ./etc/mtree/set.man				man-sys-root
 ./usr/share/info/am-utils.info			man-amd-info		info
 ./usr/share/info/as.info			man-computil-info	bfd,info
@@ -1152,6 +1152,7 @@
 ./usr/share/man/cat4/rcons.0			man-sys-catman		.cat
 ./usr/share/man/cat4/re.0			man-sys-catman		.cat
 ./usr/share/man/cat4/rl.0			man-obsolete		obsolete
+./usr/share/man/cat4/rlphy.0			man-sys-catman		.cat
 ./usr/share/man/cat4/rmidi.0			man-sys-catman		.cat
 ./usr/share/man/cat4/rnd.0			man-sys-catman		.cat
 ./usr/share/man/cat4/route.0			man-sys-catman		.cat
@@ -3445,6 +3446,7 @@
 ./usr/share/man/man4/rcons.4			man-sys-man		.man
 ./usr/share/man/man4/re.4			man-sys-man		.man
 ./usr/share/man/man4/rl.4			man-obsolete		obsolete
+./usr/share/man/man4/rlphy.4			man-sys-man		.man
 ./usr/share/man/man4/rmidi.4			man-sys-man		.man
 ./usr/share/man/man4/rnd.4			man-sys-man		.man
 ./usr/share/man/man4/route.4			man-sys-man		.man
